ajout d'une vue pour plusieur article. ajout d'une condition qui vérifie que le numero d'article voulu existe

--- a/src/blogue/templates/blogue/article_02.html
+++ b/src/blogue/templates/blogue/article_02.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Le Blogue</title>
+    <title>Article 02</title>
 </head>
 <body>
-
+  <h1>Article 02</h1>
 </body>
 </html>
