--- a/src/blogue/templates/blogue/article_03.html
+++ b/src/blogue/templates/blogue/article_03.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Le Blogue</title>
+    <title>Article 03</title>
 </head>
 <body>
-
+  <h1>Article 03</h1>
 </body>
 </html>
