--- a/src/blogue/templates/blogue/article_not_found.html
+++ b/src/blogue/templates/blogue/article_not_found.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Le Blogue</title>
+    <title>Article non trouvé</title>
 </head>
 <body>
-
+  <h1>L'article n'existe pas</h1>
 </body>
 </html>
