--- a/src/Blog/templates/Blog/index.html
+++ b/src/Blog/templates/Blog/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
-    <h1>Bonjour {{prenom|upper}}, bienvenue dans mon site</h1>
-    <h2>{{date|date:"d F Y"}}</h2>
+    <div class="container">
+        <h1>Bienvenue sur mon site</h1>
+        <h2>Aujourd'hui nous sommes le {{ date|date:"d F Y" }}</h2>
+        <h3>Il est actuellement {{ date|date:"H\hi" }}</h3>
+    </div>
 </body>
 </html>
